# New-Ancol-Platform

./: .gitignore  CHANGELOG.md  CLAUDE.md  PRODUCT-STATUS.md  PROGRESS.md  README.md  alembic.ini  cloudbuild.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/skills/new-endpoint/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.github/workflows/: ci.yml  deploy-agents.yml
corpus/data/: clause_library.json  contract_templates.json
corpus/internal/: ADART-PJAA.md  BOC-CHARTER-PJAA.md  BOD-CHARTER-PJAA.md  RPT-POLICY-PJAA.md
corpus/internal/chunks/: ADART-PJAA.jsonl  BOC-CHARTER-PJAA.jsonl  BOD-CHARTER-PJAA.jsonl  RPT-POLICY-PJAA.jsonl  _manifest.json
corpus/scripts/: chunk_regulations.py  seed_regulation_graph.py  test_retrieval_quality.py  upload_to_vertex_search.py
db/alembic/: env.py
db/alembic/versions/: 001_initial_schema.py  002_add_contract_tables.py  003_add_mfa_columns.py  004_add_user_phone_and_prefs.py  005_bjr_schema.py
db/seed/: 001_users.sql  002_mom_templates.sql  003_related_party_entities.sql  004_regulation_index.sql  005_conflict_precedences.sql  006_rkab_2026.sql  run_seeds.sh
docs/: Graph-Question-List.md  PJAA-Research-Synthesis-CLM-Compliance.docx.md  RUNBOOK-agent-builder-region-verification.md  RUNBOOK-phase-6-4a-deploy.md  SYSTEM-GUIDE.md  system-architecture.html
docs/agent-builder/: bjr-tools.json
docs/superpowers/plans/: 2026-04-15-contract-pdf-and-frontend.md  2026-04-15-pwa-push-notifications.md  2026-04-17-bjr-gemini-primary-phase-6-4a.md
docs/superpowers/specs/: 2026-04-08-agentic-mom-compliance-design.md  2026-04-12-gemini-agent-builder-integration-design.md  2026-04-14-clm-phase2-extraction-drafting-design.md  2026-04-14-clm-phase3-qa-rag-obligation-extraction-design.md  2026-04-14-phase1-gaps-rbac-obligations-design.md  2026-04-17-bjr-gemini-enterprise-primary-design.md  2026-04-17-bjr-integration-design.md
infra/environments/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
infra/modules/auth/: main.tf  outputs.tf  variables.tf
infra/modules/bigquery/: main.tf  outputs.tf  variables.tf
scripts/: bjr_graph_backfill.py  bulk_upload_historical.py  seed_bjr_demo.py  seed_clause_library.py  setup-local.sh  validate_historical.py
scripts/tests/: test_bjr_graph_backfill.py  test_seed_bjr_demo.py
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/src/api_gateway/: __init__.py  main.py
services/api-gateway/src/api_gateway/routers/: analytics.py  artifacts.py  audit.py  batch.py  contracts.py  dashboard.py  decisions.py  documents.py  drafting.py  hitl.py  notifications.py  obligations.py  reports.py  retroactive.py  rjpp.py  rkab.py  templates.py  users.py
services/api-gateway/tests/: _bjr_fixtures.py  test_bjr_compute.py  test_bjr_decisions_router.py  test_bjr_evaluators.py  test_bjr_rbac.py  test_bjr_retroactive.py  test_bjr_routers.py  test_bjr_schemas.py  test_bjr_scorer.py  test_bjr_state_machine.py  test_contract_pdf.py  test_contract_schemas.py  test_contracts.py  test_documents_bjr_indicators.py  test_drafting_engine.py  test_main.py  test_mfa.py  test_notifications.py  test_obligation_transitions.py  test_obligations.py  test_rbac_clm.py  test_rbac_enforcement.py  test_whatsapp_notifications.py
services/batch-engine/: Dockerfile  pyproject.toml
services/batch-engine/src/batch_engine/: engine.py  main.py
services/batch-engine/tests/: test_engine.py  test_main.py
services/comparison-agent/: Dockerfile  pyproject.toml
services/comparison-agent/src/comparison_agent/: __init__.py  agent.py  main.py
services/comparison-agent/src/comparison_agent/analyzers/: red_flags.py  severity.py
services/comparison-agent/src/comparison_agent/prompts/: system.py
services/comparison-agent/tests/: test_red_flags.py  test_severity.py
services/document-processor/: Dockerfile  pyproject.toml
services/document-processor/src/document_processor/: __init__.py  main.py  processor.py
services/document-processor/tests/: test_main.py  test_processor.py
services/email-ingest/: Dockerfile  pyproject.toml
services/email-ingest/src/email_ingest/: main.py  scanner.py
services/email-ingest/tests/: test_main.py  test_scanner.py
services/extraction-agent/: Dockerfile  pyproject.toml
services/gemini-agent/: Dockerfile  pyproject.toml
services/gemini-agent/src/gemini_agent/: __init__.py  api_client.py  formatting.py  formatting_bjr.py  main.py
services/gemini-agent/src/gemini_agent/rag/: __init__.py  contract_rag.py  graph_client.py  neo4j_graph.py  orchestrator.py  spanner_graph.py
services/gemini-agent/src/gemini_agent/tools/: __init__.py  bjr_decisions.py  bjr_evidence.py  bjr_passport.py  bjr_readiness.py  contract_qa.py  contracts.py  dashboard.py  drafting.py  obligations.py  regulations.py  reports.py  review.py  status.py  upload.py
services/gemini-agent/tests/: test_contract_qa.py  test_contract_tools.py  test_formatting.py  test_graph_client.py  test_main_bjr_dispatch.py  test_neo4j_graph.py  test_rag_orchestrator.py  test_review_tools.py  test_tools_bjr_decisions.py  test_tools_bjr_evidence.py  test_tools_bjr_passport.py  test_tools_bjr_readiness.py  test_upload_tool.py  test_webhook.py  test_whatsapp.py
services/legal-research-agent/: Dockerfile  pyproject.toml
services/legal-research-agent/src/legal_research_agent/: __init__.py  agent.py  main.py
services/legal-research-agent/src/legal_research_agent/prompts/: system.py
services/legal-research-agent/src/legal_research_agent/retrieval/: citation_validator.py
services/legal-research-agent/tests/: test_citation_validator.py  test_main.py
services/regulation-monitor/: Dockerfile  pyproject.toml
services/regulation-monitor/src/regulation_monitor/: checker.py  main.py  sources.py
services/regulation-monitor/tests/: test_main.py  test_sources.py
services/reporting-agent/: Dockerfile  pyproject.toml
web/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/public/: manifest.json  offline.html  sw.js
(+91 files in other folders)
