[project]
name = "ancol-mom-compliance"
version = "0.1.0"
description = "Agentic AI MoM Compliance System for PT Pembangunan Jaya Ancol Tbk"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "services"]
