[project]
name = "regulation-monitor"
version = "0.1.0"
description = "OJK/IDX Regulation Auto-Monitor for Ancol MoM Compliance System"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.27",
    "selectolax>=0.3",
    "ancol-common",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/regulation_monitor"]
